# cux

./: .gitignore  CMakeLists.txt  a.out  common.cuh  cugemms.cuh  main.cu  main.cuh  ptxx.cu  r0.cuh  r1.cuh  xgemms.cuh
.zed/: debug.json  tasks.json
cg/: a.out  cg0.cu  cg0_timed.cu
copy/: a.out  cc.cu  cc1.cu  tensorMap.cu  tma0.cu  tma1.cu  tma1x.cu  tma1y.cu  tma2.cu  tmaNO.cu  tma_gemm  tma_gemm.cu  tma_wgmma_gemm.cu  tmx  tmx.cu
cuda-gdb/: bitreverse.cu  matmul.cu
cute/: cute.cu
dims/: a.out  cg.cu  dims  dims.cu
ptx_add/: a.cu  a.out  a.ptx  b.cu  b.ptx  ptxx.cu  ptxy.cu
ptx_mem/: a.out  memtx.cu
ptx_tma/: bulkTensorCopy.cu
